# plasma-widget-paparazzi

./: .gitignore  CMakeLists.txt  INSTALL
plasmoid/: metadata.desktop
plasmoid/contents/config/: main.xml
plasmoid/contents/locale/: CMakeLists.txt  TRANSLATORS.REAME  extract-and-merge-messages.sh  infiles.list  rc.cpp
plasmoid/contents/ui/: ConfigGeneral.qml  FullRepresentation.qml  main.qml
plugin/: CMakeLists.txt  plasmoidplugin.cpp  qmldir  spectacledbusadaptor.cpp  spectacledbusadaptor.h
src/: CMakeLists.txt
src/package/: metadata.desktop
src/package/contents/ui/: main.qml
src/plugin/: CMakeLists.txt  spectacledbusadaptor.cpp  spectacledbusadaptor.h
translations/: CMakeLists.txt  TRANSLATORS.REAME  es.po  extract-and-merge-messages.sh  spectacle.pot
